croppie problem solved v1.0

--- a/admin-panel/assets/components/_floated-list.scss
+++ b/admin-panel/assets/components/_floated-list.scss
@@ -174,6 +174,7 @@ ul.floated-list.in-panel {
 .floated-list-container.in-panel{
     position: relative;
     cursor: pointer;
+    padding-left: 10px;
     & > input {
         cursor: pointer;
     }
